app-service.yml
---
  apiVersion: v1
  kind: Service
  metadata:
    name: php-app-service
    namespace: default
  spec:
    type: LoadBalancer
    selector:
      app: php-app
    ports:
      - name: http
        protocol: TCP
        port: 80
        targetPort: 8080
