k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app-deployment
  namespace: avin-development
  labels:
    app: php-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      containers:
      - name: php-app
        image: avinacr.azurecr.io/php-app:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: php-app-service
  namespace: avin-development
spec:
  selector:
    app: php-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
