ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-app-ingress
  annotations:
     kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: tf-nonprd.avin.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: php-app-service
            port:
              number: 80
